force-app/main/default/objects/DMC_Channel_Id__c/DMC_Channel_Id__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>the channels Id values that belong to the DMC setup</description>
    <label>Consent Channel Ids</label>
</CustomObject>