force-app/main/default/objects/DMC_Channel_Id__c/fields/E_Mail__c.field-meta.xml
<CustomField>
    <fullName>E_Mail__c</fullName>
    <label>E-Mail</label>
    <length>50</length>
    <type>Text</type>
</CustomField>