force-app/main/default/objects/DMC_Channel_Id__c/fields/Notifications__c.field-meta.xml
<CustomField>
    <fullName>Notifications__c</fullName>
    <label>Notifications</label>
    <length>50</length>
    <type>Text</type>
</CustomField>