force-app/main/default/objects/DMC_Channel_Id__c/fields/Phone_call__c.field-meta.xml
<CustomField>
    <fullName>Phone_call__c</fullName>
    <label>Phone call</label>
    <length>50</length>
    <type>Text</type>
</CustomField>