force-app/main/default/objects/DMC_Channel_Id__c/fields/Social_media__c.field-meta.xml
<CustomField>
    <fullName>Social_media__c</fullName>
    <label>Social media</label>
    <length>50</length>
    <type>Text</type>
</CustomField>