force-app/main/default/objects/DMC_Channel_Id__c/fields/Text_message__c.field-meta.xml
<CustomField>
    <fullName>Text_message__c</fullName>
    <label>Text message</label>
    <length>50</length>
    <type>Text</type>
</CustomField>